--- a/src/edit/TreeView.ui
+++ b/src/edit/TreeView.ui
@@ -59,6 +59,9 @@
       </item>
       <item>
        <widget class="QToolButton" name="del">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
         <property name="text">
          <string>–</string>
         </property>
