--- a/src/view/Navigation.ui
+++ b/src/view/Navigation.ui
@@ -104,7 +104,7 @@
      </property>
     </widget>
    </item>
-   <item row="7" column="0" colspan="2">
+   <item row="8" column="0" colspan="2">
     <widget class="QLabel" name="label_7">
      <property name="text">
       <string>Zoom</string>
@@ -152,7 +152,7 @@
      </property>
     </widget>
    </item>
-   <item row="6" column="0" colspan="7">
+   <item row="7" column="0" colspan="7">
     <widget class="Line" name="line">
      <property name="lineWidth">
       <number>2</number>
@@ -292,7 +292,7 @@
      </property>
     </widget>
    </item>
-   <item row="7" column="2">
+   <item row="8" column="2">
     <widget class="QToolButton" name="zoomout">
      <property name="text">
       <string>–</string>
@@ -319,7 +319,7 @@
      </property>
     </widget>
    </item>
-   <item row="8" column="0">
+   <item row="9" column="0">
     <spacer name="verticalSpacer">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
@@ -332,20 +332,40 @@
      </property>
     </spacer>
    </item>
-   <item row="7" column="5">
+   <item row="8" column="5">
     <widget class="QToolButton" name="zoomin">
      <property name="text">
       <string>+</string>
      </property>
     </widget>
    </item>
-   <item row="7" column="4">
+   <item row="8" column="4">
     <widget class="QLabel" name="zoom">
      <property name="text">
       <string>2&lt;sup&gt;–1&lt;/sup&gt;</string>
      </property>
      <property name="textFormat">
       <enum>Qt::RichText</enum>
+     </property>
+    </widget>
+   </item>
+   <item row="6" column="6">
+    <widget class="QPushButton" name="autoupdate">
+     <property name="text">
+      <string>⟳</string>
+     </property>
+     <property name="checkable">
+      <bool>true</bool>
+     </property>
+     <property name="checked">
+      <bool>false</bool>
+     </property>
+    </widget>
+   </item>
+   <item row="6" column="0" colspan="6">
+    <widget class="QLabel" name="updateinfo">
+     <property name="text">
+      <string/>
      </property>
     </widget>
    </item>
