--- a/src/view/Navigation.ui
+++ b/src/view/Navigation.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>400</width>
-    <height>317</height>
+    <height>325</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -51,14 +51,14 @@
    <item row="0" column="2" colspan="3">
     <widget class="QLineEdit" name="x">
      <property name="sizePolicy">
-      <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+      <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
      </property>
      <property name="minimumSize">
       <size>
-       <width>120</width>
+       <width>1</width>
        <height>0</height>
       </size>
      </property>
@@ -319,19 +319,6 @@
      </property>
     </widget>
    </item>
-   <item row="9" column="0">
-    <spacer name="verticalSpacer">
-     <property name="orientation">
-      <enum>Qt::Vertical</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>20</width>
-       <height>40</height>
-      </size>
-     </property>
-    </spacer>
-   </item>
    <item row="8" column="5">
     <widget class="QToolButton" name="zoomin">
      <property name="text">
@@ -351,6 +338,12 @@
    </item>
    <item row="6" column="6">
     <widget class="QPushButton" name="autoupdate">
+     <property name="minimumSize">
+      <size>
+       <width>1</width>
+       <height>0</height>
+      </size>
+     </property>
      <property name="text">
       <string>⟳</string>
      </property>
