--- a/src/main/MainWindow.ui
+++ b/src/main/MainWindow.ui
@@ -20,7 +20,7 @@
      <x>0</x>
      <y>0</y>
      <width>1523</width>
-     <height>39</height>
+     <height>23</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -276,7 +276,7 @@
     <string>&amp;Center on selected node</string>
    </property>
    <property name="shortcut">
-    <string/>
+    <string>C</string>
    </property>
   </action>
   <action name="actionFindNode">
