Starting on ProjectionWidget

--- a/src/main/MainWindow.ui
+++ b/src/main/MainWindow.ui
@@ -75,6 +75,7 @@
     <addaction name="actionRestoreDialogs"/>
     <addaction name="separator"/>
     <addaction name="actionCenterSelectedNode"/>
+    <addaction name="action3D_projection"/>
    </widget>
    <addaction name="menuFile"/>
    <addaction name="menuEdit"/>
@@ -285,6 +286,14 @@
    </property>
    <property name="shortcut">
     <string>Ctrl+F</string>
+   </property>
+  </action>
+  <action name="action3D_projection">
+   <property name="text">
+    <string>3D &amp;projection</string>
+   </property>
+   <property name="shortcut">
+    <string>P</string>
    </property>
   </action>
  </widget>
