Projection works, but I do not like the axis behavior

--- a/src/edit/ProjectionWidget.ui
+++ b/src/edit/ProjectionWidget.ui
@@ -44,7 +44,7 @@
       <enum>Qt::Vertical</enum>
      </property>
      <property name="tickPosition">
-      <enum>QSlider::TicksBelow</enum>
+      <enum>QSlider::TicksAbove</enum>
      </property>
      <property name="tickInterval">
       <number>30</number>
@@ -63,7 +63,7 @@
       <enum>Qt::Horizontal</enum>
      </property>
      <property name="tickPosition">
-      <enum>QSlider::TicksBelow</enum>
+      <enum>QSlider::TicksAbove</enum>
      </property>
      <property name="tickInterval">
       <number>30</number>
@@ -78,8 +78,45 @@
    <extends>QWidget</extends>
    <header>ProjectionView.h</header>
    <container>1</container>
+   <slots>
+    <slot>setXRotation(int)</slot>
+    <slot>setYRotation(int)</slot>
+   </slots>
   </customwidget>
  </customwidgets>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>horizontalSlider</sender>
+   <signal>valueChanged(int)</signal>
+   <receiver>widget</receiver>
+   <slot>setYRotation(int)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>187</x>
+     <y>289</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>154</x>
+     <y>153</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>verticalSlider</sender>
+   <signal>valueChanged(int)</signal>
+   <receiver>widget</receiver>
+   <slot>setXRotation(int)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>390</x>
+     <y>190</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>261</x>
+     <y>191</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
