--- a/src/edit/ProjectionWidget.ui
+++ b/src/edit/ProjectionWidget.ui
@@ -32,44 +32,6 @@
    <item row="0" column="0">
     <widget class="ProjectionView" name="widget" native="true"/>
    </item>
-   <item row="0" column="1">
-    <widget class="QSlider" name="verticalSlider">
-     <property name="maximum">
-      <number>180</number>
-     </property>
-     <property name="value">
-      <number>90</number>
-     </property>
-     <property name="orientation">
-      <enum>Qt::Vertical</enum>
-     </property>
-     <property name="tickPosition">
-      <enum>QSlider::TicksAbove</enum>
-     </property>
-     <property name="tickInterval">
-      <number>30</number>
-     </property>
-    </widget>
-   </item>
-   <item row="1" column="0">
-    <widget class="QSlider" name="horizontalSlider">
-     <property name="maximum">
-      <number>180</number>
-     </property>
-     <property name="value">
-      <number>90</number>
-     </property>
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-     <property name="tickPosition">
-      <enum>QSlider::TicksAbove</enum>
-     </property>
-     <property name="tickInterval">
-      <number>30</number>
-     </property>
-    </widget>
-   </item>
   </layout>
  </widget>
  <customwidgets>
@@ -85,38 +47,5 @@
   </customwidget>
  </customwidgets>
  <resources/>
- <connections>
-  <connection>
-   <sender>horizontalSlider</sender>
-   <signal>valueChanged(int)</signal>
-   <receiver>widget</receiver>
-   <slot>setYRotation(int)</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>187</x>
-     <y>289</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>154</x>
-     <y>153</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>verticalSlider</sender>
-   <signal>valueChanged(int)</signal>
-   <receiver>widget</receiver>
-   <slot>setXRotation(int)</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>390</x>
-     <y>190</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>261</x>
-     <y>191</y>
-    </hint>
-   </hints>
-  </connection>
- </connections>
+ <connections/>
 </ui>
