--- a/src/edit/TreeSearchDialog.ui
+++ b/src/edit/TreeSearchDialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>454</width>
-    <height>890</height>
+    <width>706</width>
+    <height>885</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -71,7 +71,7 @@
       </widget>
      </item>
      <item row="5" column="1">
-      <widget class="QLabel" name="countIntersection">
+      <widget class="QLabel" name="intersectionCount">
        <property name="text">
         <string>9999</string>
        </property>
@@ -81,7 +81,7 @@
       </widget>
      </item>
      <item row="0" column="1">
-      <widget class="QLabel" name="countExisting">
+      <widget class="QLabel" name="existingCount">
        <property name="text">
         <string>9999</string>
        </property>
@@ -93,12 +93,12 @@
      <item row="6" column="0">
       <widget class="QLabel" name="label_6">
        <property name="text">
-        <string>Exclustion:</string>
+        <string>Exclusion:</string>
        </property>
       </widget>
      </item>
      <item row="6" column="1">
-      <widget class="QLabel" name="countExclusion">
+      <widget class="QLabel" name="exclusionCount">
        <property name="text">
         <string>9999</string>
        </property>
@@ -108,7 +108,7 @@
       </widget>
      </item>
      <item row="4" column="1">
-      <widget class="QLabel" name="countUnion">
+      <widget class="QLabel" name="unionCount">
        <property name="text">
         <string>9999</string>
        </property>
@@ -132,7 +132,7 @@
       </widget>
      </item>
      <item row="2" column="1">
-      <widget class="QLabel" name="countThis">
+      <widget class="QLabel" name="thisCount">
        <property name="text">
         <string>9999</string>
        </property>
@@ -208,69 +208,31 @@
     </widget>
    </item>
    <item>
-    <widget class="QLabel" name="label_8">
-     <property name="text">
-      <string>Selected trees:</string>
+    <widget class="QTabWidget" name="tabWidget">
+     <property name="currentIndex">
+      <number>1</number>
      </property>
+     <widget class="QWidget" name="tab_3">
+      <attribute name="title">
+       <string>Existing</string>
+      </attribute>
+      <layout class="QVBoxLayout" name="verticalLayout_2">
+       <item>
+        <widget class="QTextEdit" name="existingNames"/>
+       </item>
+      </layout>
+     </widget>
+     <widget class="QWidget" name="tab_4">
+      <attribute name="title">
+       <string>This search</string>
+      </attribute>
+      <layout class="QVBoxLayout" name="verticalLayout_3">
+       <item>
+        <widget class="QTextEdit" name="thisNames"/>
+       </item>
+      </layout>
+     </widget>
     </widget>
-   </item>
-   <item>
-    <widget class="QTextEdit" name="currentMatches">
-     <property name="readOnly">
-      <bool>true</bool>
-     </property>
-    </widget>
-   </item>
-   <item>
-    <layout class="QHBoxLayout" name="horizontalLayout_4">
-     <property name="leftMargin">
-      <number>10</number>
-     </property>
-     <property name="rightMargin">
-      <number>10</number>
-     </property>
-     <item>
-      <widget class="QLabel" name="label_7">
-       <property name="text">
-        <string>List:</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QRadioButton" name="showExisting">
-       <property name="text">
-        <string>Existing</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QRadioButton" name="showThis">
-       <property name="text">
-        <string>This search</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <spacer name="horizontalSpacer_6">
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>40</width>
-         <height>20</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
-     <item>
-      <widget class="QToolButton" name="showAll">
-       <property name="text">
-        <string>Show all</string>
-       </property>
-      </widget>
-     </item>
-    </layout>
    </item>
    <item>
     <widget class="Line" name="line_3">
