Now can blur as well as sharpen

--- a/src/view/Curves.ui
+++ b/src/view/Curves.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>397</width>
+    <width>800</width>
     <height>397</height>
    </rect>
   </property>
@@ -78,7 +78,7 @@
    <item row="6" column="0">
     <widget class="QLabel" name="label_7">
      <property name="text">
-      <string>Sharpening</string>
+      <string>Blur/Sharpen</string>
      </property>
     </widget>
    </item>
@@ -139,7 +139,7 @@
    <item row="7" column="0" colspan="4">
     <widget class="QSlider" name="sharp">
      <property name="minimum">
-      <number>0</number>
+      <number>-250</number>
      </property>
      <property name="maximum">
       <number>250</number>
