MovieRender now adds scale bars, etc.

--- a/moviemaker/MMControls.ui
+++ b/moviemaker/MMControls.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>272</width>
-    <height>524</height>
+    <width>313</width>
+    <height>563</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -325,24 +325,44 @@
         </property>
        </widget>
       </item>
+      <item row="0" column="2">
+       <widget class="QLabel" name="label_6">
+        <property name="text">
+         <string>Key w.</string>
+        </property>
+       </widget>
+      </item>
+      <item row="4" column="0">
+       <widget class="QLabel" name="label_9">
+        <property name="text">
+         <string>Shadow</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="3">
+       <widget class="QDoubleSpinBox" name="somadiam">
+        <property name="decimals">
+         <number>1</number>
+        </property>
+        <property name="maximum">
+         <double>40.000000000000000</double>
+        </property>
+       </widget>
+      </item>
+      <item row="4" column="1">
+       <widget class="QDoubleSpinBox" name="shadow">
+        <property name="decimals">
+         <number>1</number>
+        </property>
+        <property name="maximum">
+         <double>100.000000000000000</double>
+        </property>
+       </widget>
+      </item>
       <item row="2" column="0">
        <widget class="QLabel" name="label_7">
         <property name="text">
          <string>Syn. ⌀</string>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="2">
-       <widget class="QLabel" name="label_8">
-        <property name="text">
-         <string>Soma ⌀</string>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="0">
-       <widget class="QLabel" name="label_5">
-        <property name="text">
-         <string>Width</string>
         </property>
        </widget>
       </item>
@@ -372,15 +392,29 @@
         </property>
        </widget>
       </item>
-      <item row="4" column="0">
-       <widget class="QLabel" name="label_9">
+      <item row="0" column="0">
+       <widget class="QLabel" name="label_5">
         <property name="text">
-         <string>Shadow</string>
+         <string>Width</string>
         </property>
        </widget>
       </item>
-      <item row="4" column="1">
-       <widget class="QDoubleSpinBox" name="shadow">
+      <item row="2" column="2">
+       <widget class="QLabel" name="label_8">
+        <property name="text">
+         <string>Soma ⌀</string>
+        </property>
+       </widget>
+      </item>
+      <item row="5" column="0">
+       <widget class="QLabel" name="label_11">
+        <property name="text">
+         <string>Font size</string>
+        </property>
+       </widget>
+      </item>
+      <item row="5" column="1">
+       <widget class="QDoubleSpinBox" name="fontsize">
         <property name="decimals">
          <number>1</number>
         </property>
@@ -389,24 +423,7 @@
         </property>
        </widget>
       </item>
-      <item row="2" column="3">
-       <widget class="QDoubleSpinBox" name="somadiam">
-        <property name="decimals">
-         <number>1</number>
-        </property>
-        <property name="maximum">
-         <double>40.000000000000000</double>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="2">
-       <widget class="QLabel" name="label_6">
-        <property name="text">
-         <string>Key w.</string>
-        </property>
-       </widget>
-      </item>
-      <item row="4" column="2" colspan="2">
+      <item row="5" column="2" colspan="2">
        <widget class="QCheckBox" name="buildup">
         <property name="text">
          <string>Build up</string>
@@ -456,6 +473,25 @@
    </item>
   </layout>
  </widget>
+ <tabstops>
+  <tabstop>theta</tabstop>
+  <tabstop>phi</tabstop>
+  <tabstop>trees</tabstop>
+  <tabstop>presyn</tabstop>
+  <tabstop>postsyn</tabstop>
+  <tabstop>width</tabstop>
+  <tabstop>height</tabstop>
+  <tabstop>steps</tabstop>
+  <tabstop>linewidth</tabstop>
+  <tabstop>keywidth</tabstop>
+  <tabstop>syndiam</tabstop>
+  <tabstop>somadiam</tabstop>
+  <tabstop>shadow</tabstop>
+  <tabstop>preview</tabstop>
+  <tabstop>clear</tabstop>
+  <tabstop>del</tabstop>
+  <tabstop>add</tabstop>
+ </tabstops>
  <resources/>
  <connections/>
 </ui>
